--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,1 +1,28 @@
-<h1>Hello this is index</h1>
+<div class="d-flex justify-content-center my-3">
+  <div class="row">
+    <div class="col">
+
+      <div class="container m-3">
+
+      <h1>Hello this is index</h1>
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </div>
+  </div>
+</div>
+
