--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,3 +1,12 @@
+<div class="banner">
+  <div class="container">
+    <h1>Le Wagon brings <strong>tech skills</strong> to <strong>creative people</strong>!</h1>
+    <p>Change your life and learn to code at one of our campuses around the world.</p>
+    <a class="btn btn-flat" href="#">Apply now</a>
+  </div>
+</div>
+
+
 <div class="d-flex justify-content-center my-3">
   <div class="row">
     <div class="col">
