--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,8 +1,19 @@
+
+
 <div class="banner">
+    <%= render 'shared/navbar' %>
+
   <div class="container">
-    <h1>Le Wagon brings <strong>tech skills</strong> to <strong>creative people</strong>!</h1>
-    <p>Change your life and learn to code at one of our campuses around the world.</p>
-    <a class="btn btn-flat" href="#">Apply now</a>
+    <h1><strong>Working Dog</strong></h1>
+    <p>Find the right Paw to help you in needs</p>
+    <%= simple_form_for :search, url: root_path, method: :get do |f| %>
+      <div class="search-form-control form-group">
+        <input class="form-control string required" type="text" name="search[query]" id="search_query" />
+        <button name="button" type="submit" class="btn btn-flat">
+          <i class="fas fa-search"></i> Search
+        </button>
+      </div>
+    <% end %>
   </div>
 </div>
 
