--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -1,3 +1,3 @@
 <h1> You're in "Show" for <%= @service.title %> </h1>
 
-<%= link_to "Back to index?", services_path %>
+<%= link_to "Back to index??", services_path %>
