--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,30 +1,45 @@
 
 
 <div class="banner">
-    <%= render 'shared/navbar' %>
+  <%= render 'shared/navbar' %>
 
   <div class="container">
     <h1><strong>Working Dog</strong></h1>
     <p>Find the right Paw to help you in needs</p>
     <%= simple_form_for :search, url: root_path, method: :get do |f| %>
-      <div class="search-form-control form-group">
-        <input class="form-control string required" type="text" name="search[query]" id="search_query" />
-        <button name="button" type="submit" class="btn btn-flat">
-          <i class="fas fa-search"></i> Search
-        </button>
-      </div>
+    <div class="search-form-control form-group">
+      <input class="form-control string required" type="text" name="search[query]" id="search_query" />
+      <button name="button" type="submit" class="btn btn-flat">
+        <i class="fas fa-search"></i> Search
+      </button>
+    </div>
     <% end %>
   </div>
 </div>
 
-
-<div class="d-flex justify-content-center my-3">
+<div class="container">
+<!-- <div class="d-flex justify-content-center my-3"> -->
   <div class="row">
     <div class="col">
 
       <div class="container m-3">
 
-      <h1>Hello this is index</h1>
+        <h1>See all Services available</h1>
+      </div>
+      <div class="container m-3">
+
+        <% @services.each do |service| %>
+        <div class="card-product my-3">
+          <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+          <div class="card-product-infos">
+            <h2><%= service.title %></h2>
+            <p><%= service.description %></p>
+          </div>
+        </div>
+        <% end %>
+
+
+
       </div>
 
 
