--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,6 +5,8 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
+  color: black;
+  text-decoration: none;
 }
 
 .card-product img {
@@ -30,3 +32,4 @@
 .card-product .card-product-infos {
   padding: 16px;
 }
+
