--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -16,48 +16,27 @@
     <% end %>
   </div>
 </div>
-
 <div class="container">
-<!-- <div class="d-flex justify-content-center my-3"> -->
-  <div class="row">
-    <div class="col">
-
-      <div class="container m-3">
-
-        <h1>See all Services available</h1>
-      </div>
-      <div class="container m-3">
-
-        <% @services.each do |service| %>
-        <div class="card-product my-3">
-          <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-          <div class="card-product-infos">
-            <h2><%= service.title %></h2>
-            <p><%= service.description %></p>
-          </div>
+  <!-- <div class="d-flex justify-content-center my-3"> -->
+    <div class="row">
+      <div class="col">
+        <div class="container m-3">
+          <h1>See all Services available</h1>
         </div>
-        <% end %>
-
-
-
+        <div class="container m-3">
+          <% @services.each do |service| %>
+          <a href="<%= service_path(service) %>">
+            <div class="card-product my-3">
+              <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+              <div class="card-product-infos">
+                <h2><%= service.title %></h2>
+                <p><%= service.description %></p>
+              </div>
+            </div>
+          </a>
+          <% end %>
+        </div>
       </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     </div>
   </div>
-</div>
 
