here's some progress on the dashboard view - still in progress

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,12 +1,39 @@
-<% @services.each do |x| %>
-    <div>
-      <div ><%= x.title %></div>
-      <div><%= x.description %></div>
-    </div>
-<% end %>
-<% @bookings.each do |x| %>
-    <div>
-      <div ><%= x.user %></div>
-      <div><%= x.service %></div>
-    </div>
-<% end %>
+
+<div class="dashboard_container">
+<h2>Dashboard</h2>
+<header>
+  <h2>Cities</h2>
+</header>
+
+<section>
+  <nav>
+    <ul>
+      <li><a href="#">booking1</a></li>
+      <li><a href="#">booking2</a></li>
+      <li><a href="#">booking3</a></li>
+    </ul>
+  </nav>
+
+  <article>
+    <h1>Bookings</h1>
+
+    <% @bookings.each do |x| %>
+        <div>
+          <div ><%= x.service.user.username %></div>
+          <div><%= x.service.title %></div>
+        </div>
+
+           <div class="card-product">
+          <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+          <div class="card-product-infos">
+            <h2><%= x.date %></h2>
+            <p>Product description with <strong>relevant info</strong> only.</p>
+          </div>
+        </div>
+    <% end %>
+</div>
+  </article>
+</section>
+</div>
+
+
