--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -26,7 +26,7 @@
           <% end %>
 
           <!-- no link for booking new yet so i left a second index path -->
-          <%= link_to services_path do%>
+          <%= link_to new_service_booking_path(@service) do%>
           <p class="btn btn-primary">Book Service</p>
           <% end %>
         </div>
