--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,11 +1,8 @@
 <div class="dashboard_container">
 <h2>Dashboard</h2>
-<header>
-  <h2>Cities</h2>
-</header>
 
-<section>
-  <nav>
+<section class="my_section">
+  <nav class="my_nav">
     <ul>
       <li><a href="#">booking1</a></li>
       <li><a href="#">booking2</a></li>
@@ -13,7 +10,7 @@
     </ul>
   </nav>
 
-  <article>
+  <article class="my_article">
     <h1>Bookings</h1>
     <% @services.each do |service| %>
    <!--        <div ><%= service.user.username %></div> -->
