--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -6,7 +6,7 @@
       <%= f.error_notification %>
       <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
       <div class="form-inputs">
-        <%= f.input :date, :as => :datepicker %>
+        <%= f.input :date %>
         <%#= f.input :photo, as: :file %>
       </div>
 
