--- a/app/views/layouts/application-no-nav.html.erb
+++ b/app/views/layouts/application-no-nav.html.erb
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <%= favicon_link_tag asset_path("clipart-paw.png") %>
-  <title>Working Dog</i>
-</title>
+  <title>Working Dog</title>
   <%= csrf_meta_tags %>
   <%= action_cable_meta_tag %>
   <%= stylesheet_link_tag 'application', media: 'all' %>
