added the price and simple form

--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -31,6 +31,7 @@
               <div class="card-product-infos">
                 <h2><%= service.title %></h2>
                 <p><%= service.description %></p>
+                <p><%= service.price %>€</p>
               </div>
             </div>
           </a>
