added booking links to service card in dashboard

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -18,8 +18,16 @@
           <div class="card-product">
           <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
           <div class="card-product-infos">
-            <div><%= service.title %></div>
+          <div><%= service.title %></div>
+             <ul>
+             <% service.bookings.each do |job| %>
 
+              <a class="dashboard_link" href="#">
+                <li class="dashboard_booking_details"><%= job.date %><p class=""><%= job.user.username %></p></li>
+              </a>
+
+             <% end %>
+             </ul>
           </div>
         </div>
 
