--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -83,3 +83,12 @@
   padding: 16px;
 }
 
+.dashboard_booking_details{
+  display:flex;
+}
+
+.dashboard_link{
+  color: black;
+  text-decoration: none;
+}
+
