--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,13 @@
 <body>
   <%= render 'shared/navbar' %>
   <%= render 'shared/flashes' %>
-  <%= yield %>
+    <div id="page-container">
+      <div id="content-wrap">
+      <%= yield %>
+      </div>
+      <%= render 'shared/footer' %>
+    </div>
   <%= javascript_include_tag 'application' %>
   <%= javascript_pack_tag 'application' %>
-  <%= render 'shared/footer' %>
 </body>
 </html>
