--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,9 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+$nav-fot: #999595;
+$back: #D9D9D9;
+$card-ser: #A1B1E2;
+$card-bok: #9EC993;
+$buttons: #8B85C1;
