--- a/app/views/services/new.html.erb
+++ b/app/views/services/new.html.erb
@@ -13,12 +13,12 @@
       </div>
 
       <div class="form-actions">
-        <%= f.submit class: 'btn btn-primary' %>
+        <%= f.submit class: 'btn btn-outline-button' %>
       </div>
       <% end %>
 
       <%= link_to dashboard_path do%>
-        <p class="btn btn-danger">Back to Profile</p>
+        <p class="btn btn-outline-button">Back to Profile</p>
       <% end %>
 
     </div>
