layout for forms

--- a/app/assets/stylesheets/components/_body.scss
+++ b/app/assets/stylesheets/components/_body.scss
@@ -17,3 +17,10 @@
 body {
   background-color: $background;
 }
+
+.container-form {
+  width: 600px;
+  padding: 18px;
+  background-color: white;
+  border: 3px solid $nav-foot;
+}
