--- a/app/views/services/new.html.erb
+++ b/app/views/services/new.html.erb
@@ -1,6 +1,7 @@
 <div class="d-flex container justify-content-center ">
   <div class="row">
     <div class="col" style="margin: 32px;">
+      <div class="container-form">
       <h1>New Service</h1>
       <%= simple_form_for(@service) do |f| %>
       <%= f.error_notification %>
@@ -13,14 +14,14 @@
       </div>
 
       <div class="form-actions">
-        <%= f.submit class: 'btn btn-outline-button' %>
+        <%= f.submit class: 'btn btn-outline-button mb-3' %>
       </div>
       <% end %>
 
       <%= link_to dashboard_path do%>
         <p class="btn btn-outline-button">Back to Profile</p>
       <% end %>
-
+      </div>
     </div>
   </div>
 </div>
