added card and layout to booking new

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -4,6 +4,14 @@
   border-radius: 50%;
   object-fit: cover;
 }
+.avatar-card {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: $nav-foot 3px solid;
+}
+
 .avatar-large {
   width: 56px;
   border-radius: 50%;
