--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,15 +1,15 @@
 #footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
-  height:2.5rem;
+  height: 2.5rem;
   width: 100%;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.08));
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.9));
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
-  padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
+  padding: 0px 50px 0px 50px;
+  background-color: lightgrey;
+
 }
 
 .footer-links {
