--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,7 +1,7 @@
 #map {
   /*Need to Modify height to position "bannner height"*/
-  height: 80%;
+  min-height: 1200px;
+  width: 60%;
   position: sticky;
-  top: 0;
   background: green;
 }
