--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -16,28 +16,31 @@
     <% end %>
   </div>
 </div>
-<div class="container">
-  <!-- <div class="d-flex justify-content-center my-3"> -->
-    <div class="row">
-      <div class="col">
-        <div class="container m-3">
-          <h1>See all Services available</h1>
-        </div>
-        <div class="container m-3">
-          <% @services.each do |service| %>
-          <a href="<%= service_path(service) %>">
-            <div class="card-product my-3">
-              <%= cl_image_tag service.user.photo.key %>
-              <div class="card-product-infos">
-                <h2><%= service.title %></h2>
-                <p><%= service.description %></p>
-                <p><%= service.price %>€</p>
-              </div>
+<!-- <div class="d-flex justify-content-center my-3"> -->
+  <div id="services-index-main-container">
+    <div id="services-index-cards-container">
+      <h3>Available Services</h3>
+      <div class="container">
+        <% @services.each do |service| %>
+        <a href="<%= service_path(service) %>">
+          <div class="card-product">
+            <%= cl_image_tag service.user.photo.key %>
+            <div class="card-product-infos">
+              <h2><%= service.title %></h2>
+              <p><%= service.description %></p>
+              <p><%= service.price %>€</p>
             </div>
-          </a>
-          <% end %>
-        </div>
+          </div>
+        </a>
+        <% end %>
       </div>
     </div>
+    <div id="map" data-mapbox-api-key="<%= ENV['MAPBOX_TOKEN'] %>" data-markers="<%=  [{lat: 32.0853, lng: 34.7818}].to_json%>">
+      <!-- <img src="https://picsum.photos/id/237/200/300"> -->
+
+    </div>
   </div>
+</div>
+
+
 
