added card on show

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -12,6 +12,13 @@
   border: $nav-foot 3px solid;
 }
 
+.avatar-show {
+  width: 80px;
+  height: 80px;
+  border-radius: 10%;
+  object-fit: cover;
+}
+
 .avatar-large {
   width: 56px;
   border-radius: 50%;
