--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -33,6 +33,12 @@
   padding: 16px;
 }
 
+.card-show-pic {
+  position: absolute;
+  right: 16px;
+  top: 16px;
+}
+
 .card-service-pic {
   position: absolute;
   right: 16px;
