added cards to show and new booking

--- a/app/assets/stylesheets/components/_body.scss
+++ b/app/assets/stylesheets/components/_body.scss
@@ -23,4 +23,11 @@ body {
   padding: 18px;
   background-color: white;
   border: 3px solid $nav-foot;
+  min-height: 200px;
+}
+
+.bottom-left {
+  position: absolute;
+  bottom: 32px;
+  left: 40px;
 }
