--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -6,17 +6,18 @@
 
 
 
-        <div class="card container-form" style="width: 18rem;">
+        <div class="card container-form" style="width: 400px;">
           <div class="card-body">
-            <div class="card-product-infos">
+            <div class="card-product-infos" style="width: 250px;">
+              <p class="card-service-price"> <strong> <%= @service.price %>€</strong></p>
               <h2><%= @service.title %></h2>
               <br>
-              <br>
+              <h6 class="card-subtitle text-muted bottom-left">by: <%= @service.user.username.capitalize %></h6>
 
-              <p class="card-service-price"> <strong> <%= @service.price %>€</strong></p>
+
             </div>
             <br>
-            <%= cl_image_tag @service.user.photo.key, class: 'avatar-card mb-3 card-service-pic' %>
+            <%= cl_image_tag @service.user.photo.key, class: 'avatar-card mb-3 card-service-pic mr-3'  %>
           </div>
         </div>
       </div>
@@ -24,7 +25,7 @@
       <div class="col" style="margin: 32px;">
 
         <div class="container-form ">
-          <h1>Add Booking for <%= @service.title %></h1>
+          <h1>Add Booking</h1>
           <%= simple_form_for([@service, @booking]) do |f| %>
           <%= f.error_notification %>
           <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
