--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -17,11 +17,9 @@
         </div>
 
         <div class="form-actions">
-          <%= f.button :submit, "Send me reset password instructions" %>
+          <%= f.button :submit, "Send me reset password instructions",class: 'btn btn-outline-button' %>
         </div>
         <% end %>
-
-        <%= render "devise/shared/links" %>
 
       </div>
     </div>
