--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -13,24 +13,32 @@
 /* Create two columns/boxes that floats next to each other */
 .my_nav {
   float: left;
-  width: 30%;
   height: 300px; /* only for demonstration, should be removed */
-  background: #ccc;
+  background: white;
   padding: 20px;
+  width: 45%;
+  display:flex;
 }
 
 /* Style the list inside the menu */
 .my_nav ul {
   list-style-type: none;
   padding: 0;
+  width: 55%;
+  margin-left: 15px;
 }
 
 .my_article {
   float: left;
-  padding: 20px;
-  width: 70%;
-  background-color: #f1f1f1;
-  height: 300px; /* only for demonstration, should be removed */
+  width: 45%;
+  background-color: white;
+  margin-left: 15px;
+  display:flex;
+  flex-direction:column;
+}
+
+.my_inner_container {
+  padding:20px;
 }
 
 /* Clear floats after the columns */
@@ -97,3 +105,13 @@
   height:20px;
   background-color:red;
 }
+.dashboard_subtitles{
+    color: white;
+    font-family: roboto;
+    font-size: 24px;
+    background-color: #A1B1E2;
+    width: 100%;
+    height: 54px;
+    line-height: 54px;
+    text-indent: 31px;
+  }
