--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -51,16 +51,17 @@
 
 .card-product {
   overflow: hidden;
-  height: 120px;
+  height: auto;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
-  margin-top: 30px;
+  margin-top: 15px;
+  margin-bottom: 30px;
 }
 
 .card-product img {
-  height: 100%;
+  height: 120px;
   width: 120px;
   object-fit: cover;
 }
