--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -2,6 +2,9 @@
   box-sizing: border-box;
 }
 
+$servicesColor: #A1B1E2;
+$bookingsColor: #4F509B;
+
 .dashboard_container{
   width:75%;
   display: -webkit-flex;
@@ -20,26 +23,16 @@
   display:flex;
 }
 
-/* Style the list inside the menu */
+/* Style the list inside the menu
 .my_nav ul {
-  list-style-type: none;
+ list-style-type: none;
   padding: 0;
   width: 55%;
   margin-left: 15px;
 }
+*/
 
-.my_article {
-  float: left;
-  width: 45%;
-  background-color: white;
-  margin-left: 15px;
-  display:flex;
-  flex-direction:column;
-}
 
-.my_inner_container {
-  padding:20px;
-}
 
 /* Clear floats after the columns */
 .my_section:after {
@@ -58,19 +51,13 @@
 }
 
 .card-product {
-  overflow: hidden;
-  height: 120px;
-  background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  display: flex;
-  align-items: center;
-  margin-top: 30px;
-}
-
-.card-product img {
-  height: 100%;
-  width: 120px;
-  object-fit: cover;
+  // overflow: hidden;
+  // height: 120px;
+  // background: white;
+  // box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  // display: flex;
+  // align-items: center;
+  // margin-top: 30px;
 }
 
 .card-product h2 {
@@ -91,10 +78,6 @@
   padding: 16px;
 }
 
-.dashboard_booking_details{
-  display:flex;
-}
-
 .dashboard_link{
   color: black;
   text-decoration: none;
@@ -105,13 +88,115 @@
   height:20px;
   background-color:red;
 }
+  .articles{
+  display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: stretch;
+}
+
+.my_article {
+  background-color: white;
+  display:flex;
+  flex-direction:column;
+  flex-grow:1;
+    $secMarg: 30px;
+  &.bookings{margin-right: $secMarg/2;}
+  &.services{margin-left: $secMarg/2;}
+}
+
+
 .dashboard_subtitles{
     color: white;
-    font-family: roboto;
+    font-family: roboto, open-sans, sans-serif;
     font-size: 24px;
-    background-color: #A1B1E2;
+
     width: 100%;
     height: 54px;
     line-height: 54px;
     text-indent: 31px;
+
+    $secMarg: 30px;
+  &.bookings{ background-color: $bookingsColor;}
+
+  &.services{ background-color: $servicesColor;}
+}
+
+.dashboard-headline{
+  display:flex;
+}
+.product-info{
+  display:flex;
+  padding-bottom: 25px;
+}
+
+.service_heading{
+      display: flex;
+    justify-content: space-between;
+    border-bottom: solid 2px $servicesColor;
+    color: $servicesColor;
+    padding: 0 15px;
+}
+
+.service_heading:hover>.delete, .product-info:hover>.delete2{
+  opacity:1;
+}
+
+.delete, .delete2{position: absolute;
+    transform: translate(-37px, -4px);
+    background-color: $servicesColor;
+    color: #fff;
+    text-align: center;
+    line-height: 30px;
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
+    box-shadow: 0 3px 1px rgba(0,0,0,.3);
+opacity:0;
+transition: opacity ease-in-out 250ms;
+*{color: #fff;}
   }
+
+
+
+.dashboard_booking_details{
+*{display:block;}
+display: flex;
+height: 60px;
+flex-direction: column;
+color: #ABABAB;
+
+.dashboard_date{
+font-size: 17px;
+line-height: 20px;
+
+}
+}
+
+.card-product{
+  padding: 35px;
+  height: inherit !important;
+ box-shadow: none !important;
+  img{
+  margin-right: 10px;
+  width:60px;
+  height:60px;
+  border-radius:30px;
+}
+}
+
+.all_details{
+display: flex;
+}
+
+ul{
+  padding: 0;
+  margin-block-end:0;
+}
+
+.detail_text{
+  font-size: 17px;
+  .dashboard_date{
+    font-weight: bold;
+  }
+}
