Updated services-index style to match dashboard style

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,6 +1,7 @@
 #map {
   /*Need to Modify height to position "bannner height"*/
-  min-height: 1200px;
+  min-height: 75vh;
+  margin: 16px;
   width: 60%;
   position: sticky;
   background: green;
