--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -8,3 +8,35 @@
 #services-index-cards-container {
   flex-grow: 1;
 }
+
+// Copied from "my_article" in _dashboard partial --> just changed name
+//
+#services-index-cards-container {
+  margin: 16px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+
+  $secMarg: 30px;
+
+  &.bookings { margin-right: $secMarg / 2 ; }
+  &.services { margin-left: $secMarg / 2 ; }
+}
+
+// Copied from "dasboard_subtitles services" in _dashbaord partial
+
+#services-index-owner-heading {
+    color: white;
+    font-family: roboto, open-sans, sans-serif;
+    font-size: 24px;
+
+    width: 100%;
+    height: 54px;
+    line-height: 54px;
+    text-indent: 31px;
+
+    $secMarg: 30px;
+
+    background-color: $card-service;
+}
