--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -19,7 +19,7 @@
 <!-- <div class="d-flex justify-content-center my-3"> -->
   <div id="services-index-main-container">
     <div id="services-index-cards-container">
-      <h3>Available Services</h3>
+      <h3 id="services-index-owner-heading">Available Services</h3>
       <div class="container">
         <% @services.each do |service| %>
         <a href="<%= service_path(service) %>">
