--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,5 +1,4 @@
 <div class="dashboard_container">
-<h2>Dashboard</h2>
 <section class="articles">
   <div class='button -regular center'> <%= link_to 'new service', new_service_path(current_user.id)%></div>
 
@@ -11,11 +10,15 @@
           <div class="card-product-infos">
              <ul>
              <%  if  booking.user == current_user %>
-              <a class="dashboard_link" href="#">
+              <div class="dashboard_link">
                <li class="dashboard_booking_details my_bookings"><h2 class=""><%= booking.service.user.username %></h2></li>
                 <li class="dashboard_booking_details my_bookings"><p class=""><%= booking.date %></p></li>
                  <li class="dashboard_booking_details my_bookings"><p class=""><%= booking.service.title %></p></li>
-              </a>
+              </div>
+               <div class="delete2">
+              <%= link_to booking_path(booking), method: :delete do %>
+                <div class="font-awesome-trash"><i class="fas fa-trash" aria-hidden="true"></i></div>
+              <% end %>
              <% end %>
              </ul>
           </div>
