--- a/app/views/services/new.html.erb
+++ b/app/views/services/new.html.erb
@@ -1,27 +1,52 @@
 <div class="d-flex container justify-content-center ">
   <div class="row">
     <div class="col" style="margin: 32px;">
-      <div class="container-form">
-      <h1>New Service</h1>
-      <%= simple_form_for(@service) do |f| %>
-      <%= f.error_notification %>
-      <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
-      <div class="form-inputs">
-        <%= f.input :title %>
-        <%= f.input :price %>
-        <%= f.input :description %>
-        <%#= f.input :photo, as: :file %>
-      </div>
 
-      <div class="form-actions">
-        <%= f.submit class: 'btn btn-outline-button mb-3' %>
-      </div>
-      <% end %>
 
-      <%= link_to dashboard_path do%>
-        <p class="btn btn-outline-button">Back to Profile</p>
-      <% end %>
-      </div>
+      <article class="my_article services" style="width: 500px;">
+        <h1 class="dashboard_subtitles services">New Services</h1>
+        <div class = "my_inner_container" style="padding: 50px;">
+
+
+          <%= simple_form_for(@service) do |f| %>
+          <%= f.error_notification %>
+          <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+
+          <div class="d-flex justify-content-between">
+            <div class="form-inputs form-changes">
+              <%= f.input :title %>
+            </div>
+            <div class="form-inputs form-changes">
+
+              <%= f.input :price %>
+            </div>
+          </div>
+
+          <div class="form-inputs form-changes">
+            <%= f.input :description, class: 'height: 350px;' %>
+          </div>
+
+          <%#= f.input :photo, as: :file %>
+
+          <div class="form-actions container">
+            <div class="d-flex justify-content-end">
+
+              <%= link_to dashboard_path do%>
+              <p class="btn btn-outline-button m-3">Back to Profile</p>
+              <% end %>
+              <%= f.submit class: 'btn btn-outline-button my-3' %>
+
+            </div>
+            <% end %>
+          </div>
+
+
+        </div>
+      </article>
+
+
     </div>
   </div>
 </div>
+
+
