--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -50,6 +50,11 @@ $bookingsColor: #4F509B;
   }
 }
 
+.dashboard-scrollable-inner-container {
+  overflow-y: scroll;
+  height: 90vh;
+}
+
 .card-product {
   // overflow: hidden;
   // height: 120px;
