--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -3,6 +3,7 @@
 <section class="articles">
   <article class="my_article bookings">
     <h1 class="dashboard_subtitles bookings">Bookings</h1>
+    <div class="dashboard-scrollable-inner-container">
     <% @bookings.each do |booking| %>
           <div class="card-product">
           <%= cl_image_tag booking.service.user.photo.key, 'aria-haspopup': true, 'aria-expanded': false %>
@@ -19,9 +20,11 @@
           </div>
         </div>
     <% end %>
+    </div>
   </article>
   <article class="my_article services">
     <h1 class="dashboard_subtitles services">Services</h1>
+    <div class="dashboard-scrollable-inner-container">
     <div class = "my_inner_container ">
     <% @services.each do |service| %>
           <div class="service_heading">
@@ -63,6 +66,7 @@
         </div>
       </div>
     <% end %>
+    </div>
   </article>
   </section>
    <%= link_to 'new service', new_service_path(current_user.id), class: "btn btn-primary" %>
