--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -20,7 +20,7 @@
   <div id="services-index-main-container">
     <div id="services-index-cards-container">
       <h3 id="services-index-owner-heading">Available Services</h3>
-      <div class="container">
+      <div class="container services-inner-container">
         <% @services.each do |service| %>
         <a href="<%= service_path(service) %>">
           <div class="card-product">
