--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -201,7 +201,7 @@ line-height: 20px;
 
 .card-product{
   padding: 35px;
-  height: inherit !important;
+  height: auto;
  box-shadow: none !important;
   img{
   margin-right: 10px;
